--- a/apuntes_git_rmarkdown.Rmd
+++ b/apuntes_git_rmarkdown.Rmd
@@ -231,9 +231,13 @@ Git projects are usually managed on Github, a website that hosts Git projects fo
 
 
 > Para subir este documento a github: en yalm puse `output: github_document` para que cree un archivo (.md) aparte del (.Rmd). 
-en la consola de GIT BACH me dirigí a la carpeta local que contiene este archivo, luego revisé `git status` , añadí los archivos con `git add .`, luego un commit `git commit -m "formato github(por ejemplo)"` y finalmente un push, `git push`.
+en la consola de GIT BACH me dirigí a la carpeta local que contiene este archivo, luego revisé `git status` , añadí los archivos con `git add .` (el punto es para subir todos los documentos q cambiaron, el .Rmd y .md, y los subí para comparar las salidas), luego un commit `git commit -m "formato github(por ejemplo)"` y finalmente un push, `git push`. Ahora se puede ver el documento en la pagina de GitHub con los render correspondientes de las sintaxis Markdown (el .md). 
 
-**Ahora un repositorio remoto con GitHub:**
+
+**Ahora, cómo publicar un documento tipo blog hosteando la página con GitHub Pages**
+
+**Fuente:** (https://resources.github.com/whitepapers/github-and-rstudio/)
+
 
 
 
