--- a/apuntes_git_rmarkdown.Rmd
+++ b/apuntes_git_rmarkdown.Rmd
@@ -1,9 +1,13 @@
 ---
 title: "Apuntes Git y RMarkdown"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Patricio Said"
 date: "25 de mayo de 2019"
 
-output: github_document
 ---
 
 ***
@@ -20,6 +24,7 @@ output: github_document
 - Libro [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/) (**VER**)
 - Instrucciones de GitHub / RStudio (https://resources.github.com/whitepapers/github-and-rstudio/) (**VER**)
 - RMarkdown formato de documentos GitHub (https://rmarkdown.rstudio.com/github_document_format.html) (**VER**)
+- Diagramas del flujo de trabajo en GitHub (https://guides.github.com/introduction/flow/)
 
 ***
 
@@ -249,19 +254,62 @@ en la consola de GIT BACH me dirig? a la carpeta local que contiene este archivo
 
 After you have created the R Markdown document and finished making your changes, it is time to commit them.
 
-1. In RStudio click the Git tab in the upper right pane.(*bien, ahora me aparece  , puse guardar los cambios para que aparezca para hacer commit* )
-2. Click Commit. (*ok*)
+1. In RStudio click the `Git` tab in the upper right pane.(*bien, ahora me aparece  , puse guardar los cambios para que aparezca para hacer commit* )
+2. Click `Commit`. (*ok*)
 3. In the Review changes view, check the staged box for all files. (*ok*)
 4. Add a commit message, for example Add initial speed and distance report. (*ok*)
-5. Click Commit. (*ok*)
-6. Click the Pull button to fetch any remote changes. (*ok*)
-7. Click the Push button to push your changes to the remote repository. (*ok*)
+5. Click `Commit`. (*ok*)
+6. Click the `Pull` button to fetch any remote changes. (*ok*)
+7. Click the `Push` button to push your changes to the remote repository. (*ok*)
 8. On GitHub, navigate to the Code tab of the repository to see the changes. (*ok*)
 
 Olvidé el archivo .md, repito los pasos anteriores para añadirlo.
 
+*Create local branches with Git*
 
+Let’s make a couple of more changes in your project using the steps of GitHub Flow. As RStudio currently does not support local branches very well, we will use Git from the command-line in RStudio.
 
+1. In RStudio click the `Terminal` tab in the lower left pane. The `Terminal` tab is next to the Console tab. 
+2. Create a new branch. Replace <BRANCH-NAME> with a descriptive name, yo le puse "new-branch": `git branch new-branch`
+3. Check your repository’s status: `git status`
+4. Check out to your new branch: `git checkout new-branch`
+5. Verify that you are now checked out to your new branch: `git status`
+
+*Make local changes with Git*
+
+Let’s generate the HTML output in a separate directory called docs. To do this we add a function in the heading of the R Markdown document to ‘knit’ the output in the desired output directory.
+
+1. In RStudio open el archivo .Rmd (en mi caso es este mismo documento `apuntes_git_rmarkdown.Rmd`) and add the following lines in the heading under the title field: 
+
+```{r eval = FALSE}
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
+```
+(*En el yalm tuve q sacar `output: github_document`*)
+
+(*También tuve que crear una carpeta llamada docs para que guardara el archivo index.htlm ya que me salia error*)
+
+2. Click `File`, Save to save the changes.
+
+**Commit local changes with Git**
+
+After you have created the HTML output, it is time to commit the changes.  
+
+1. Determine your file’s status. Remember that `git status` allows us to see the status of the files on our branch at any given time. Your file is listed under the heading `Untracked files`: `git status`  
+2. Add your file to the staging area so it’s prepared to become part of the next commit: `git add .`  
+3. See your file’s current status. Your file is now listed under the heading `Changes to be committed`. This tells us that the file is in the staging area. It also indicates this is a new file:  `git status`  
+4. Commit your file. Replace `<COMMIT-MESSAGE>` with a log message describing the changes, for example `Knit output to a docs folder`. A commit tells Git to collect all of the files in the staging area and store them to version control as a single unit of work:  `git commit -m "<COMMIT-MESSAGE>"`
+5. See the history of commits: `git log --online`  (*me salió error*)
+6. See the changes between the master branch and the current branch (HEAD): `git diff --stat --summary master..<BRANCH-NAME>`
+
+**Open a pull request on GitHub**
+
+Now that you have made some local commits, it is time to send your changes to the remote copy of your repository on GitHub and create a Pull Request.
+
+1. Push the changes to the remote repository: `git push -u origin <BRANCH-NAME>`
 
 
 
