--- a/apuntes_git_rmarkdown.Rmd
+++ b/apuntes_git_rmarkdown.Rmd
@@ -310,7 +310,8 @@ After you have created the HTML output, it is time to commit the changes.
 Now that you have made some local commits, it is time to send your changes to the remote copy of your repository on GitHub and create a Pull Request.
 
 1. Push the changes to the remote repository: `git push -u origin <BRANCH-NAME>`
-
+2. Create a [Pull Request](https://help.github.com/en/articles/creating-a-pull-request) on GitHub.
+Fill out the body of the Pull Request with information about the changes you’re introducing.
 
 
 
