--- a/apuntes_git_rmarkdown.Rmd
+++ b/apuntes_git_rmarkdown.Rmd
@@ -312,6 +312,41 @@ Now that you have made some local commits, it is time to send your changes to th
 1. Push the changes to the remote repository: `git push -u origin <BRANCH-NAME>`
 2. Create a [Pull Request](https://help.github.com/en/articles/creating-a-pull-request) on GitHub.
 Fill out the body of the Pull Request with information about the changes you’re introducing.
+3. Fill out the body of the Pull Request with information about the changes you’re introducing.
+
+**Merge your pull request on GitHub**
+
+Since this is your repository, you probably don’t have anyone to collaborate with (yet). Go ahead and merge your Pull Request now.
+
+1. On GitHub, navigate to the `Pull Request` that you just opened.
+2. Scroll down and click the big green `Merge Pull` Request button.
+3. Click `Confirm Merge`.
+4. Delete the branch <BRANCH-NAME>.
+
+# CREAR LA PAGINA! porfin
+
+This tutorial is going to use GitHub Pages to publish the HTML output. To initialize GitHub Pages we need to perform a few more steps:
+
+1. In your repository, click the `Settings` tab.
+2. Scroll down to the `GitHub Pages` section.
+3. Under `Source`, select `master branch /docs folder`. 
+4. Click `Save` to save the changes.
+5. Click the generated GitHub Pages URL to view the rendered R Markdown document.
+
+**Note:** GitHub Pages sites are always public when hosted on GitHub.com. If you want to share a site with a select number of people you can use Jekyll Auth. On GitHub Enterprise users need to authenticate to access GitHub Pages sites when private mode is enabled.
+
+
+**Update local repository**
+
+After you merge your Pull Request, you will need to update your local copy of the repository.
+
+1. In the RStudio Terminal pane, type: `git checkout master`
+2. Type: `git pull`
+3. Delete the local branch: `git branch -D <BRANCH-NAME>`
+4. See the history of your commits in a graph: `git log --oneline --graph --all`
+
+You can also view the history of your commits in RStudio. Click Commit in the Git pane to open the Review Changes panel and then click History.
+
 
 
 
