--- a/apuntes_git_rmarkdown.Rmd
+++ b/apuntes_git_rmarkdown.Rmd
@@ -1,17 +1,29 @@
 ---
 title: "Apuntes Git y RMarkdown"
-output: github_document
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+  encoding=encoding,
+  output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Patricio Said"
 date: "25 de mayo de 2019"
-
+output:
+  html_document:
+    theme: flatly 
+    highlight: tango
 ---
+<!-- !!!!!TENER OJO CON EL YALM!!!! cualquier espacio o tab mal puesto no corre!--> 
+
+[Ver la versiÃ³n documento (.md) en GitHub](https://github.com/patosaid/apuntes_git_rmarkdown/blob/master/apuntes_git_rmarkdown.md)
+
+
 
 ***
-<!-- así se ponen comentarios en rmarkdown--> 
-### Un poco de documentación: 
+<!-- asÃ­ se ponen comentarios en rmarkdown--> 
+### Un poco de documentaciÃ³n: 
 - [Cheat sheet de Rmarkdown](https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf) 
 - [Sintaxis para documentos en GitHub (markdown)](https://help.github.com/en/articles/basic-writing-and-formatting-syntax)
-- Página de Git, manuales, libros, documentos en español: [got-scm.com](https://git-scm.com/book/es/v2)
+- PÃ¡gina de Git, manuales, libros, documentos en espaÃ±ol: [got-scm.com](https://git-scm.com/book/es/v2)
 - Un blog de apuntes corto de [Git/GitHub](https://libreim.github.io/blog/2014/02/23/manualgit/)
 - Un repositorio de apuntes: [aprende Git "curso"](https://github.com/JJ/aprende-git)
 - Otro repositorio de apuntes: [aprende Git](https://github.com/DGIIMUnderground/DGIIM1)
@@ -26,31 +38,31 @@ date: "25 de mayo de 2019"
 
 **Nota:**
 
-> El **objetivo** de este documento se enfoca en la creación y publicación de un post formato blog. Se mostrará paso a paso, desde la escritura en Rmarkdown hasta publicación en GitHub.
+> El **objetivo** de este documento se enfoca en la creaciÃ³n y publicaciÃ³n de un post formato blog. Se mostrarÃ¡ paso a paso, desde la escritura en Rmarkdown hasta publicaciÃ³n en GitHub.
 
 ## Elementos de RMarkdown
 
-RMarkdown y GitHub utilizan la sintaxis de Markdown para reproducir facilmente formatos de escrituras (html en este caso). Para escribir un documento bien estructurado es fundamental conocer los elementos básicos para crear un texto: títulos, subtítulos, listas, letras en cursivas o en negritas, citas, etc. Por ejemplo en RMarkdown, para diferenciar un parafo de otro se deben separar por una lina de código vacía.
+RMarkdown y GitHub utilizan la sintaxis de Markdown para reproducir facilmente formatos de escrituras (html en este caso). Para escribir un documento bien estructurado es fundamental conocer los elementos bÃ¡sicos para crear un texto: tÃ­tulos, subtÃ­tulos, listas, letras en cursivas o en negritas, citas, etc. Por ejemplo en RMarkdown, para diferenciar un parafo de otro se deben separar por una lina de cÃ³digo vacÃ­a.
 
-### Sintaxis básicas
+### Sintaxis bÃ¡sicas
 
-A continuación se presenta algunas de las principales sintaxis y en la linea siguiente la salida o (render) correspondiente:
+A continuaciÃ³n se presenta algunas de las principales sintaxis y en la linea siguiente la salida o (render) correspondiente:
 
-`# Ejemplo de título grande`
+`# Ejemplo de tÃ­tulo grande`
 
-# Ejemplo de título grande
+# Ejemplo de tÃ­tulo grande
 
-`### Ejemplo de un sub título`
+`### Ejemplo de un sub tÃ­tulo`
 
-### Ejemplo de un sub título
+### Ejemplo de un sub tÃ­tulo
 
 `*cursiva*` y `*negrita*`
 
 *cursiva* y  **negrita**
 
-<code>\`formato código\`</code>
+<code>\`formato cÃ³digo\`</code>
 
-`formato código`
+`formato cÃ³digo`
 
 `superindice^2^ y subindice~2~`
 
@@ -74,17 +86,17 @@ Poner signos: \* \_ \\
 
 ---
 
-`Ecuación en linea $A=\pi*r^2$`
+`EcuaciÃ³n en linea $A=\pi*r^2$`
 
-Ecuación en linea $A=\pi*r^2$
+EcuaciÃ³n en linea $A=\pi*r^2$
 
 `$$A=\pi*r^2$$`
 
 $$A=\pi*r^2$$
 
-`Saltar a [Ejemplo de título grande]`
+`Saltar a [Ejemplo de tÃ­tulo grande]`
 
-Saltar a [Ejemplo de título grande] 
+Saltar a [Ejemplo de tÃ­tulo grande] 
 
 `> Cita`
 
@@ -125,7 +137,7 @@ Saltar a [Ejemplo de título grande]
 - [ ] Open a pull request
 
 
-### Comandos básicos de git en consola
+### Comandos bÃ¡sicos de git en consola
 
 
 * `git init` creates a new Git repository.
@@ -194,7 +206,7 @@ Luego de instalar Git se debe configurar el nombre de usuario y email.
 
 `git config --global user.email "correo@email.com"`
 
-Ver <https://help.github.com/en/articles/set-up-git> para mas información.
+Ver <https://help.github.com/en/articles/set-up-git> para mas informaciÃ³n.
 
 Para crear un repositorio en Git se suele usar las linas de comandos, algunas son:
 
@@ -207,7 +219,7 @@ Para crear un repositorio en Git se suele usar las linas de comandos, algunas so
 * `mkdir`: crea un directorio
 * `touch`: crea un archivo
 
-**Ahora usémoslas para crear un repositorio:**
+**Ahora usÃ©moslas para crear un repositorio:**
 
 1. `mkdir git_practice` to make a new directory to practice.
 2. `cd git_practice` to make the new directory your working directory.
@@ -232,10 +244,10 @@ Git projects are usually managed on Github, a website that hosts Git projects fo
 
 
 > Para subir este documento a github: en yalm puse `output: github_document` para que cree un archivo (.md) aparte del (.Rmd). 
-en la consola de GIT BACH me dirigí a la carpeta local que contiene este archivo, luego revisé `git status` , añadí los archivos con `git add .` (el punto es para subir todos los documentos q cambiaron, el .Rmd y .md, y los subí para comparar las salidas), luego un commit `git commit -m "formato github(por ejemplo)"` y finalmente un push, `git push`. Ahora se puede ver el documento en la pagina de GitHub con los render correspondientes de las sintaxis Markdown (el .md). 
+en la consola de GIT BACH me dirigÃ­ a la carpeta local que contiene este archivo, luego revisÃ© `git status` , aÃ±adÃ­ los archivos con `git add .` (el punto es para subir todos los documentos q cambiaron, el .Rmd y .md, y los subÃ­ para comparar las salidas), luego un commit `git commit -m "formato github(por ejemplo)"` y finalmente un push, `git push`. Ahora se puede ver el documento en la pagina de GitHub con los render correspondientes de las sintaxis Markdown (el .md). 
 
 
-**Ahora, cómo publicar un documento tipo blog hosteando la página con GitHub Pages**
+**Ahora, cÃ³mo publicar un documento tipo blog hosteando la pÃ¡gina con GitHub Pages**
 
 **Fuente:** (https://resources.github.com/whitepapers/github-and-rstudio/)
 
@@ -243,7 +255,7 @@ en la consola de GIT BACH me dirigí a la carpeta local que contiene este archivo
 
 1. Crear nuevo proyecto: File > New project > Version control > Git
 2. Pegar la URL del repositorio creado en GitHub , en mi caso: https://github.com/patosaid/apuntes_git_rmarkdown.git
-3.  Clic en crear. (esto hace que se clone el repo en la carpeta q elegí... quedó la cagá, tengo un repo clonado dentro de un repo...)
+3.  Clic en crear. (esto hace que se clone el repo en la carpeta q elegÃ­... quedÃ³ la cagÃ¡, tengo un repo clonado dentro de un repo...)
 4. Crear un documento (este mismo)
 
 **Commit and push the changes to GitHub**
@@ -259,21 +271,21 @@ After you have created the R Markdown document and finished making your changes,
 7. Click the `Push` button to push your changes to the remote repository. (*ok*)
 8. On GitHub, navigate to the Code tab of the repository to see the changes. (*ok*)
 
-OlvidÃ© el archivo .md, repito los pasos anteriores para aÃ±adirlo.
+OlvidÃ© el archivo .md, repito los pasos anteriores para aÃ±dirlo.
 
 *Create local branches with Git*
 
-Letâ€™s make a couple of more changes in your project using the steps of GitHub Flow. As RStudio currently does not support local branches very well, we will use Git from the command-line in RStudio.
+Let's make a couple of more changes in your project using the steps of GitHub Flow. As RStudio currently does not support local branches very well, we will use Git from the command-line in RStudio.
 
 1. In RStudio click the `Terminal` tab in the lower left pane. The `Terminal` tab is next to the Console tab. 
 2. Create a new branch. Replace <BRANCH-NAME> with a descriptive name, yo le puse "new-branch": `git branch new-branch`
-3. Check your repositoryâ€™s status: `git status`
+3. Check your repository's status: `git status`
 4. Check out to your new branch: `git checkout new-branch`
 5. Verify that you are now checked out to your new branch: `git status`
 
 *Make local changes with Git*
 
-Letâ€™s generate the HTML output in a separate directory called docs. To do this we add a function in the heading of the R Markdown document to â€˜knitâ€™ the output in the desired output directory.
+Let's generate the HTML output in a separate directory called docs. To do this we add a function in the heading of the R Markdown document to "knit" the output in the desired output directory.
 
 1. In RStudio open el archivo .Rmd (en mi caso es este mismo documento `apuntes_git_rmarkdown.Rmd`) and add the following lines in the heading under the title field: 
 
@@ -294,9 +306,9 @@ knit: (function(input_file, encoding) {
 
 After you have created the HTML output, it is time to commit the changes.  
 
-1. Determine your fileâ€™s status. Remember that `git status` allows us to see the status of the files on our branch at any given time. Your file is listed under the heading `Untracked files`: `git status`  
-2. Add your file to the staging area so itâ€™s prepared to become part of the next commit: `git add .`  
-3. See your fileâ€™s current status. Your file is now listed under the heading `Changes to be committed`. This tells us that the file is in the staging area. It also indicates this is a new file:  `git status`  
+1. Determine your file's status. Remember that `git status` allows us to see the status of the files on our branch at any given time. Your file is listed under the heading `Untracked files`: `git status`  
+2. Add your file to the staging area so it's prepared to become part of the next commit: `git add .`  
+3. See your file's current status. Your file is now listed under the heading `Changes to be committed`. This tells us that the file is in the staging area. It also indicates this is a new file:  `git status`  
 4. Commit your file. Replace `<COMMIT-MESSAGE>` with a log message describing the changes, for example `Knit output to a docs folder`. A commit tells Git to collect all of the files in the staging area and store them to version control as a single unit of work:  `git commit -m "<COMMIT-MESSAGE>"`
 5. See the history of commits: `git log --online`  (*me saliÃ³ error*)
 6. See the changes between the master branch and the current branch (HEAD): `git diff --stat --summary master..<BRANCH-NAME>`
@@ -307,12 +319,12 @@ Now that you have made some local commits, it is time to send your changes to th
 
 1. Push the changes to the remote repository: `git push -u origin <BRANCH-NAME>`
 2. Create a [Pull Request](https://help.github.com/en/articles/creating-a-pull-request) on GitHub.
-Fill out the body of the Pull Request with information about the changes youâ€™re introducing.
-3. Fill out the body of the Pull Request with information about the changes youâ€™re introducing.
+Fill out the body of the Pull Request with information about the changes you're introducing.
+3. Fill out the body of the Pull Request with information about the changes you're introducing.
 
 **Merge your pull request on GitHub**
 
-Since this is your repository, you probably donâ€™t have anyone to collaborate with (yet). Go ahead and merge your Pull Request now.
+Since this is your repository, you probably don't have anyone to collaborate with (yet). Go ahead and merge your Pull Request now.
 
 1. On GitHub, navigate to the `Pull Request` that you just opened.
 2. Scroll down and click the big green `Merge Pull` Request button.
